project_sources/collector/fixtures/powershell_analysis/good/custom_fail_row_fails_command.ps1
$Rows = @()
$Rows += [pscustomobject]@{ Check = "Fixture"; Status = "FAIL"; Detail = "bad row" }
throw "Validation failed: $($Rows.Count) failing row"
