project_sources/collector/fixtures/powershell_analysis/bad/fail_row_green_exit.ps1
$Rows = @()
$Rows += [pscustomobject]@{ Check = "Fixture"; Status = "FAIL"; Detail = "bad row" }
$Rows | ConvertTo-Json
